force-app/main/default/objects/iManage_Setting__c/iManage_Setting__c.object-meta.xml
<CustomObject>
    <label>iManage Setting</label>
    <nameField>
        <displayFormat>IFN-{000000}</displayFormat>
        <label>iManage Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>iManage Setting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>