force-app/main/default/objects/iManage_Setting__c/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <label>Jurisdiction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>