force-app/main/default/objects/iManage_Setting__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <label>Matter</label>
    <length>50</length>
    <type>Text</type>
</CustomField>