force-app/main/default/objects/iManage_Setting__c/fields/Workspaces__c.field-meta.xml
<CustomField>
    <fullName>Workspaces__c</fullName>
    <label>Workspaces</label>
    <length>255</length>
    <type>Text</type>
</CustomField>