force-app/main/default/objects/iManage_Setting__c/fields/WorkspaceSubcase__c.field-meta.xml
<CustomField>
    <fullName>WorkspaceSubcase__c</fullName>
    <label>WorkspaceSubcase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>