force-app/main/default/objects/iManage_Setting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Folder_Id__c</columns>
    <columns>IsProcessed__c</columns>
    <columns>Jurisdiction__c</columns>
    <columns>Matter__c</columns>
    <columns>Name__c</columns>
    <columns>Workspaces__c</columns>
    <columns>Class__c</columns>
    <columns>Client__c</columns>
    <columns>WorkspaceSubcase__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>